src/objects/inscor__Assistant_Setting__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Class_Name__c</fullName>
        <description>The name of the apex class that implements processing this rule</description>
        <inlineHelpText>The name of the apex class that implements processing this rule</inlineHelpText>
        <label>Class Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Assistant Settings</relationshipLabel>
        <relationshipName>Assistant_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Currency_Value_1_Title__c</fullName>
        <label>Currency Value 1 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Currency_Value_1__c</fullName>
        <label>Currency Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Numeric_Value_1_Title__c</fullName>
        <label>Numeric Value 1 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Numeric_Value_1__c</fullName>
        <label>Numeric Value 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Numeric_Value_2_Title__c</fullName>
        <defaultValue>&quot;Unused&quot;</defaultValue>
        <label>Numeric Value 2 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Numeric_Value_2__c</fullName>
        <label>Numeric Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Option_Value_1_Title__c</fullName>
        <defaultValue>&quot;Unused&quot;</defaultValue>
        <label>Option Value 1 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Option_Value_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Option Value 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Option_Value_2_Title__c</fullName>
        <defaultValue>&quot;Unused&quot;</defaultValue>
        <label>Option Value 2 Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Option_Value_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Option Value 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Setting_Description__c</fullName>
        <label>Setting Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Setting_Logic__c</fullName>
        <label>Setting Logic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Assistant Setting</label>
    <listViews>
        <fullName>inscor__All_Assistant_Settings</fullName>
        <columns>NAME</columns>
        <columns>inscor__Setting_Description__c</columns>
        <columns>inscor__Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assistant Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assistant Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>inscor__Do_not_allow_changing_class_name</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(ISNEW()),  ISCHANGED( inscor__Class_Name__c ))</errorConditionFormula>
        <errorDisplayField>inscor__Class_Name__c</errorDisplayField>
        <errorMessage>You must not change class name</errorMessage>
    </validationRules>
</CustomObject>